--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
     "@mui/material-nextjs": "^7.3.2",
+    "@mui/x-data-grid": "^8.11.3",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
