--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.18.0",
     "@mui/material-nextjs": "^7.3.2",
     "@mui/x-data-grid": "^8.11.3",
+    "@mui/x-date-pickers": "^8.11.3",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "react": "19.1.0",
