overall system working but there is lot of bugs

--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
     "@mui/material-nextjs": "^7.3.2",
+    "@mui/system": "^5.18.0",
     "@mui/x-data-grid": "^8.11.3",
     "@mui/x-date-pickers": "^8.11.3",
     "@reduxjs/toolkit": "^2.9.0",
+    "agora-react-uikit": "^1.2.0",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.7",
     "zod": "^4.1.8"
@@ -32,7 +35,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/axios": "^0.9.36",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^19",
