--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@reduxjs/toolkit": "^2.9.0",
     "agora-react-uikit": "^1.2.0",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "react": "19.1.0",
