--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "zod": "^4.1.8"
   },
